change to green

--- a/geographic_analysis.ipynb
+++ b/geographic_analysis.ipynb
@@ -3633,7 +3633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3649,17 +3649,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1744/1191241380.py:3: DtypeWarning:\n",
-      "\n",
-      "Columns (19,30) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "\n"
+      "/tmp/ipykernel_3865/1191241380.py:3: DtypeWarning: Columns (19,30) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(file_path)\n"
      ]
     }
    ],
@@ -3671,7 +3669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3694,7 +3692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3710,7 +3708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -3734,7 +3732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3744,7 +3742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3757,7 +3755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3787,7 +3785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3837,7 +3835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3848,7 +3846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3862,7 +3860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3876,7 +3874,7 @@
        " 'AVERAGE_SALARY']"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3887,7 +3885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3897,7 +3895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3918,7 +3916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3928,7 +3926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3938,7 +3936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3948,7 +3946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3974,7 +3972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3987,7 +3985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4000,7 +3998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4011,7 +4009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4026,7 +4024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4049,7 +4047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4541,7 +4539,7 @@
        "                                        random_state=42))])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4552,7 +4550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -4627,7 +4625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4661,7 +4659,7 @@
     "    'Feature': features,\n",
     "    'Importance': importances\n",
     "})\n",
-    "importance_event_visitor = importance_event_visitor.sort_values(by='Importance', ascending=False)\n",
+    "importance_event_visitor = importance_event_visitor.sort_values(by='Importance', ascending=True)\n",
     "\n",
     "# Step 5: Output top 10\n",
     "print(\"\\nFeature Importance Ranking:\")\n",
@@ -4746,7 +4744,7 @@
     "    locations='STATE_ABBR',\n",
     "    locationmode=\"USA-states\",\n",
     "    color='remote_ratio',\n",
-    "    color_continuous_scale=\"Greens\",  # changed from \"Blues\" to \"Greens\"\n",
+    "    color_continuous_scale=\"Greens\",  \n",
     "    scope=\"usa\",\n",
     "    labels={'remote_ratio': 'Remote Job Ratio'},\n",
     "    hover_data={\n",
