--- a/skill_gap.qmd
+++ b/skill_gap.qmd
@@ -158,4 +158,22 @@ fig.write_html("./figures/skill_gap.html", include_plotlyjs='cdn')
 ```{=html}
 <iframe width="1000" height="700" src="./figures/skill_gap.html" title="Market Comparison"></iframe>
 ```
-## Recomendations
+# Recomendations
+
+Given our analysis above, we have decided to focus on some of the key actions and learning goals that each of us can take in order to further our chances of landing a high quality position in our chosen industry.
+
+
+### SQL
+
+#### Beginner
+
+We recommend using tools such as SQLBolt to begin developing a foundational understanding of basic syntax, queries, and selecting columns from datasets. This will build familiarity with the program itself and develop a confidence in import and simple manipulation of data.
+
+#### Intermediate
+
+Next, we will incorporate real-world data sets (ex. Kaggle) to begin creating analysis. As an example, you could utilize sales data, new customers, inventory levels, certain trends over time, etc. Utilizng applications such as LinkedIn Learning or Coursera can assist with this.
+
+
+#### Advanced 
+
+At this stage, we will aim for constructing pipelines that are sufficient from beginning to end and that integrate a prouction quality result. As a final step, DataLemur provides candidates with interview questions that correspond to SQL and have been confirmed by various companies such as Amazon, Google, etc.
